[package]
name = "chadder-rs"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
incremental = false
build-override.debug = 0
lto = true
codegen-units = 1
panic = "abort"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = {version = "0.8.4", features = ["os-poll", "net"]}
serde = {version = "1.0.144", features = ["derive"]}
serde_derive = "1.0.144"
rand = "0.8.5"
crossterm = "0.25.0"
cursive = { version = "0.20.0", default-features = false, features = ["crossterm-backend"]}
lazy_static = "1.4.0"
bincode = "1.3.3"
tokio = {version = "1.21.0", features = ["full"]}
async-net = "*"
rsa = "0.6.1"
sodiumoxide = "0.2.7"
anyhow = "1.0.64"
miniz_oxide = "0.6.2"
log = "0.4"
fern = "0.6.1"
chrono = "0.4.22"
mlua = {version = "0.8.3", features = ["async", "lua54", "vendored", "macros"]}
crossbeam = "0.8.2"
futures = "0.3.24"
parking_lot = "0.12.1"
[profile.dev.package.num-bigint-dig]
opt-level = 3